{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 92,
  "lineage": "88d3a995-dee1-44b9-07cd-05166cc09911",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f80860f6662d369a",
            "arn": "arn:aws:ec2:eu-west-3:565393052458:instance/i-0df2a90f9fd9dc922",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0df2a90f9fd9dc922",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "exam_mahdi",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07844fb9a738acbeb",
            "private_dns": "ip-10-0-1-58.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.58",
            "public_ip": "15.237.95.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08e5731a9a02cf46b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09cb58a33ca42ff78",
            "tags": {
              "Name": "wordpress-web-server"
            },
            "tags_all": {
              "Name": "wordpress-web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0722a9cba6d808ac7"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "module.ec2.aws_security_group.web_sg",
            "module.ec2.data.aws_ami.amazon-linux-2",
            "module.network.aws_subnet.pub_subnet_az1",
            "module.network.aws_subnet.pub_subnet_az2",
            "module.network.aws_vpc.vpc",
            "module.rds.aws_db_instance.wordpress_db_az1",
            "module.rds.aws_db_subnet_group.subnet_groupe",
            "module.rds.aws_security_group.db_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:565393052458:security-group/sg-0722a9cba6d808ac7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0722a9cba6d808ac7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wordpress-web-sg-20250414004544685600000002",
            "name_prefix": "wordpress-web-sg-",
            "owner_id": "565393052458",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-web-sg"
            },
            "tags_all": {
              "Name": "wordpress-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0162bb4ce90d2ae39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05891b0076cf00b4b",
            "arn": "arn:aws:ec2:eu-west-3:565393052458:elastic-ip/eipalloc-05891b0076cf00b4b",
            "domain": "vpc",
            "id": "eipalloc-05891b0076cf00b4b",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-13-36-150-221.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.150.221",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my_eip_az1"
            },
            "tags_all": {
              "Name": "my_eip_az1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e976ce868325c1e3",
            "arn": "arn:aws:ec2:eu-west-3:565393052458:elastic-ip/eipalloc-0e976ce868325c1e3",
            "domain": "vpc",
            "id": "eipalloc-0e976ce868325c1e3",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-15-236-31-176.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.31.176",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my_eip_az2"
            },
            "tags_all": {
              "Name": "my_eip_az2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:565393052458:internet-gateway/igw-0d63e600daa07fce3",
            "id": "igw-0d63e600daa07fce3",
            "owner_id": "565393052458",
            "tags": {
              "Name": "exam-network-igw"
            },
            "tags_all": {
              "Name": "exam-network-igw"
            },
            "vpc_id": "vpc-0162bb4ce90d2ae39"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:565393052458:route-table/rtb-0a69ca5718763c886",
            "id": "rtb-0a69ca5718763c886",
            "owner_id": "565393052458",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d63e600daa07fce3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_routetable"
            },
            "tags_all": {
              "Name": "public_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0162bb4ce90d2ae39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd15c803c26db431",
            "route_table_id": "rtb-0a69ca5718763c886",
            "subnet_id": "subnet-09cb58a33ca42ff78"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.pub_route_table",
            "module.network.aws_subnet.pub_subnet_az1",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076669be4a2a8ab47",
            "route_table_id": "rtb-0a69ca5718763c886",
            "subnet_id": "subnet-04c4ab2f58f4e56ba"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.pub_route_table",
            "module.network.aws_subnet.pub_subnet_az2",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:565393052458:subnet/subnet-09cb58a33ca42ff78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cb58a33ca42ff78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "565393052458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_az1"
            },
            "tags_all": {
              "Name": "public_subnet_az1"
            },
            "vpc_id": "vpc-0162bb4ce90d2ae39"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:565393052458:subnet/subnet-04c4ab2f58f4e56ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c4ab2f58f4e56ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "565393052458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_az2"
            },
            "tags_all": {
              "Name": "public_subnet_az2"
            },
            "vpc_id": "vpc-0162bb4ce90d2ae39"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:565393052458:vpc/vpc-0162bb4ce90d2ae39",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06136a40bd5d926ce",
            "default_route_table_id": "rtb-0909247e02fa49246",
            "default_security_group_id": "sg-0dbef8a09a9151d47",
            "dhcp_options_id": "dopt-0a864a509151b6c55",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0162bb4ce90d2ae39",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0909247e02fa49246",
            "owner_id": "565393052458",
            "tags": {
              "Name": "exam-network-VPC"
            },
            "tags_all": {
              "Name": "exam-network-VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:565393052458:security-group/sg-067ee87b0adcea916",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067ee87b0adcea916",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0722a9cba6d808ac7"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "wordpress-db-sg-20250414004547036000000004",
            "name_prefix": "wordpress-db-sg-",
            "owner_id": "565393052458",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-db-sg"
            },
            "tags_all": {
              "Name": "wordpress-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0162bb4ce90d2ae39"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.web_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}